Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17848

[WIN32K] Fix a weird control character in dibobj.c CreateDIBPalette() Line 152

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.4.14, 0.4.15
    • None
    • None

    Description

      see
      https://github.com/reactos/reactos/commit/38322f9b144216991082e19165ef03c10a6e8d10

      Somehow this control character sneaked into that file.
      It affects 0.4.14RC (and 0.4.15).

      The fix is pure white-space-tweaking. No functional change.

      Attachments

        Activity

          People

            reactosfanboy reactosfanboy
            reactosfanboy reactosfanboy
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: