[WIN32K] Fix a weird control character in dibobj.c CreateDIBPalette() CORE-17848